--- a/src/app/song-details/song-details.component.html
+++ b/src/app/song-details/song-details.component.html
@@ -1,6 +1,3 @@
-<p>song-details works!</p>
-
-<h1>{{song?.title}}</h1>
-<p>{{song?.link}}</p>
-<p>{{song?.album}}</p>
-<p>{{song?.author}}</p>
+<app-song-details-view
+  [song]="song | async"
+></app-song-details-view>
