feature: add ui kit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<app-song-details></app-song-details>
+<nb-layout>
+
+  <nb-layout-header fixed>
+  <!-- Insert header here -->
+    Типа хидер
+  </nb-layout-header>
+
+  <nb-layout-column>
+
+    <app-song-search></app-song-search>
+    <app-song-details></app-song-details>
+
+  </nb-layout-column>
+
+  <nb-layout-footer fixed>
+  Нет ну это бан
+  </nb-layout-footer>
+
+</nb-layout>
